--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.tat.thai_herb">
+          package="com.tat.thai_herb">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
             android:name=".MyApp"
@@ -15,26 +15,33 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.search.SearchActivity"></activity>
+        <activity
+                android:name=".ui.description.DescriptionHerbActivity"
+                android:label="@string/title_activity_description_herb"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".ui.description.DescriptionActivity">
+        </activity>
+        <activity android:name=".ui.search.SearchActivity"/>
         <activity
                 android:name=".ui.register.RegisterActivity"
                 android:screenOrientation="portrait"
-                android:windowSoftInputMode="stateHidden"></activity>
+                android:windowSoftInputMode="stateHidden"/>
         <activity
                 android:name=".ui.login.LoginActivity"
                 android:screenOrientation="portrait"
-                android:windowSoftInputMode="stateHidden"></activity>
+                android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
                 android:name=".ui.main.MainActivity"
                 android:screenOrientation="portrait"
-                android:windowSoftInputMode="stateHidden"></activity>
+                android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
