--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.tat.thai_herb"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -66,6 +66,8 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'io.alterac.blurkit:blurkit:1.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
