--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,9 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    implementation 'io.alterac.blurkit:blurkit:1.1.0'
+    implementation 'com.github.andrefrsousa:SuperBottomSheet:1.5.0'
+
+    implementation 'com.github.jorgecastilloprz:fabprogresscircle:1.01'
 
 }
 apply plugin: 'com.google.gms.google-services'
