(KASINPOD update GEMA1)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.resetpassword.ResetPassword"
+        <activity android:name=".ui.game.JigsawActivity"
+                android:screenOrientation="landscape"
+                android:windowSoftInputMode="stateHidden"/>
+        <activity
+                android:name=".utilty.game.puzzle.PuzzleActivity"
+                android:screenOrientation="landscape"
+                android:windowSoftInputMode="stateHidden" />
+        <activity
+                android:name=".ui.resetpassword.ResetPassword"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".ui.profile.ProfileActivity"
+        <activity
+                android:name=".ui.profile.ProfileActivity"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden" />
         <activity
